Fix button alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,3 +52,13 @@ model-viewer {
   width: 100%;
   height: 400px;
 }
+
+.crossmint-button {
+  border-radius: 1rem !important;
+  width: 100%;
+  padding: 1rem 1.25rem !important;
+}
+
+.crossmintParagraph-0-2-3 {
+  width: 100% !important;
+}
